tests/baselines/reference/instanceOfInExternalModules.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
instanceOfInExternalModules_require.ts(1,20): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== instanceOfInExternalModules_1.ts (0 errors) ====
    ///<reference path='instanceOfInExternalModules_require.ts'/>
    import Bar = require("instanceOfInExternalModules_require");
    function IsFoo(value: any): boolean {
        return value instanceof Bar.Foo;
    }
    
==== instanceOfInExternalModules_require.ts (1 errors) ====
    export class Foo { foo: string; }
                       ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    